syntax = "proto3";
package rafay.dev.rpc.v3;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "proto/types/userpb/v3/role.proto";

// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info : {
    title : "Role management Service"
    version : "2.0"
    contact : {name : "Rafay Dev"}
  }
  schemes : HTTPS
  consumes : "application/json"
  consumes : "application/yaml"
  produces : "application/json"
  produces : "application/yaml"
  security_definitions : {
    security : {
      key : "BasicAuth"
      value : {type : TYPE_BASIC}
    }
    security : {
      key : "ApiKeyAuth"
      value : {type : TYPE_API_KEY in : IN_HEADER name : "X-RAFAY-API-KEYID"}
    }
  }
  security : {
    security_requirement : {
      key : "BasicAuth"
      value : {}
    }
    security_requirement : {
      key : "ApiKeyAuth"
      value : {}
    }
  }
  responses : {
    key : "403"
    value : {
      description : "Returned when the role does not have permission to access "
                    "the resource."
    }
  }
  responses : {
    key : "404"
    value : {
      description : "Returned when the resource does not exist."
      schema : {json_schema : {type : STRING}}
    }
  }
};

message GetRolesRequest {}
message GetRoleRequest { string id = 1; }
message DeleteRoleRequest { string id = 1; }
message PutRoleRequest {
  string id = 1;
  rafay.dev.types.user.v3.Role role = 2;
}
message GetRolesResponse { repeated rafay.dev.types.user.v3.Role role = 1; }
message RoleResponse {
  string status = 1;
  string message = 2;
}

service Role {
  rpc CreateRole(rafay.dev.types.user.v3.Role)
      returns (rafay.dev.types.user.v3.Role) {
    option (google.api.http) = {
      post : "/auth/v3/roles"
      body : "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses : {
        key : "201"
        value : {description : "Returned when role is created successfully."}
      }
    };
  };

  rpc GetRoles(GetRolesRequest) returns (GetRolesResponse) {
    option (google.api.http) = {
      get : "/auth/v3/roles"
    };
  };

  rpc GetRole(GetRoleRequest) returns (rafay.dev.types.user.v3.Role) {
    option (google.api.http) = {
      get : "/auth/v3/role/{id}"
    };
  };

  rpc UpdateRole(PutRoleRequest) returns (RoleResponse) {
    option (google.api.http) = {
      put : "/auth/v3/role/{id}"
      body : "role"
    };
  };

  rpc DeleteRole(DeleteRoleRequest) returns (RoleResponse) {
    option (google.api.http) = {
      delete : "/auth/v3/role/{id}"
    };
  };
}